WIK-DPS-TP04/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
spec:
    replicas: 4
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 50%
    selector:
        matchLabels:
            app: api
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
                - name: api
                  image: registry.cluster.wik.cloud/public/echo
                  resources:
                      limits:
                          memory: '128Mi'
                          cpu: '500m'
                  ports:
                      - containerPort: 8080
