WIK-DPS-TP04/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: api
    labels:
        name: api
spec:
    containers:
        - name: api
          image: registry.cluster.wik.cloud/public/echo
          resources:
              limits:
                  memory: '128Mi'
                  cpu: '500m'
          ports:
              - containerPort: 8080
