WIK-DPS-TP04/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    selector:
        app: api
    ports:
        - port: 8080
          targetPort: 8080
