WIK-DPS-TP04/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myingress
    labels:
        name: myingress
spec:
    rules:
        - host: kubapi.info
          http:
              paths:
                  - pathType: Prefix
                    path: '/'
                    backend:
                        service:
                            name: api
                            port:
                                number: 8080
